--- a/bigdata.html
+++ b/bigdata.html
@@ -255,7 +255,7 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB WordCloud </h2>
-							<iframe src="2019-dnlab-wordcloud.PNG" width="800" height="400"> </iframe>
+							<iframe src="2019-dnlab-wordcloud.png" width="800" height="400"> </iframe>
 				</section>
 
 
