--- a/bigdata.html
+++ b/bigdata.html
@@ -244,7 +244,7 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB Bigdata </h2>
-							<iframe src="scholar.JPG" width="800" height="400"> </iframe>
+							<iframe src="scholar.JPG" height="600"> </iframe>
 				</section>
 
 				<section data-background="#dddddd">
