--- a/bigdata.html
+++ b/bigdata.html
@@ -244,18 +244,18 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB Bigdata </h2>
-							<iframe src="scholar.JPG" width="800"> </iframe>
+							<iframe src="scholar.JPG" width="800" height="600"> </iframe>
 				</section>
 
 				<section data-background="#dddddd">
 					<h2> DNLAB's GitHub Project  </h2>
 						<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
-						<iframe src="github.JPG" width="800"></iframe>
+						<iframe src="github.JPG" width="800" height="600"></iframe>
 				</section>
 
 				<section>
 					<h2> DNLAB WordCloud </h2>
-							<iframe src="2019-dnlab-wordcloud.png" height="400"> </iframe>
+							<iframe src="2019-dnlab-wordcloud.png" width="600" height="600"> </iframe>
 				</section>
 
 
