--- a/bigdata.html
+++ b/bigdata.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-icon.png" data-background-transition="zoom">
-					<h1><font color="#000000">데이터로 문제풀기</font></h1>
+					<h1><font color="#000000">Newtorking Data</font></h1>
 					<h3><font color="#f08">Data,</font> <font color="#000080">SW,</font> <font color="#00FF00">Insight </font>?</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="800000">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
@@ -97,7 +97,7 @@
 					<ol>
 					<li> 데이터 수집: Apache Flume, Apache Kafka </li>
 					<li> 분석알고리즘: 추천, 예측 (data mining/machine learning)</li>
-					<li> 분산컴퓨팅 SW: MapReduce, Hadoop, Spark, ...) </li>
+					<li> 분산컴퓨팅 SW 플랫폼: MapReduce, Hadoop, Spark, ...) </li>
 					<li> <p class="fragment">분석알고리즘 + SW 플랫폼 -> 문제해결 </p> </li>
 					</ol>
 				</section>
@@ -111,12 +111,6 @@
 					<h2>Example: Recommendation</h2>
 					<p> Netflix Prize</p>
 					<img width="800" height="430" data-src="https://assets3.thrillist.com/v1/image/2677184/size/gn-gift_guide_variable_c;jpeg_quality=20.jpg">
-				</section>
-
-				<section>
-					<h2>Example: Prediction</h2>
-					<iframe src="http://www.huffingtonpost.com/2014/01/18/amazon-anticipatory-shipping-items-before-ordered_n_4623499.html" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-
 				</section>
 
 				<!-- Example of nested vertical slides -->
@@ -191,59 +185,12 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2>Nexon</h2>
-
-<iframe src="https://career.nexon.com/user/recruit/notice/noticeView?joinCorp=NX&reNo=20160255" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" scrolling="yes" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px">
-				</section>
-
-
-				<section>
-					<h2>Amazon </h2>
-			<iframe src="//www.slideshare.net/slideshow/embed_code/key/1hChBA1eMEspky" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/awskr/awskrug-reinvent-iot" title="AWSKRUG 콘퍼런스 - re:Invent 신규 서비스 (윤석찬) - 빅데이터 분석, 모바일 및 IoT를 중심으로" target="_blank">AWSKRUG 콘퍼런스 - re:Invent 신규 서비스 (윤석찬) - 빅데이터 분석, 모바일 및 IoT를 중심으로</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/awskr">AWS Korea UserGroup (AWS한국사용자모임)</a></strong> </div>
-				</section>
-
-				<section>
-					<h2>NCsoft</h2>
-					<iframe src="//www.slideshare.net/slideshow/embed_code/key/HHFpr24lFz8Vm6" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/LeeEunJo/r-14930327" title="R을 이용한 게임 데이터 분석" target="_blank">R을 이용한 게임 데이터 분석</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/LeeEunJo">Eun-Jo Lee</a></strong> </div>
-				</section>
-
-				<section>
-					<h2>5Rocks</h2>
-					<iframe src="//www.slideshare.net/slideshow/embed_code/key/cKxtsx8jdw49g0" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/deview/244-5rocksdeview" title="244 5rocks-deview" target="_blank">244 5rocks-deview</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/deview">NAVER D2</a></strong> </div>
-				</section>
-
-				<section>
-					<h2> Les's begin with small data! </a> </h2>
-					<ul>
-					<li> <a href="http://www.quantifiedself.com"> Quantified Self (자신을 측정하여 삶의 개선하려는 운동) </li>
-					<li> 핵심은 Small data 수집 및 분석</li>
-					<li> 예) Fitbit, Rescuetime, Coachme.com, <a href="www.hellodatascience.com">Hellodatascience.com </a></li>
-					</ul>
-
-				</section>
-                                <section>
-					<img width="400" height="350" data-src="fitbit-body-yslee.PNG">
-					<img width="400" height="350" data-src="fitbit-step-yslee.PNG">
-					<img width="400" height="350" data-src="rescue-time.PNG">
-
-                                </section>
-				<section>
-					<h2> Graph of My Fitness </h2>
-					<iframe width="800" height="600" src="https://www.youtube.com/embed/qPGkmtZf0q0" frameborder="0" allowfullscreen></iframe>
-				</section>
-
-				<section>
-					<h2> WordCloud</h2>
-					<iframe width="800" height="600" src="https://www.youtube.com/embed/rCRVFhRaDwA" frameborder="0" allowfullscreen></iframe>
-				</section>
-
-				<section>
 					<h2> Data Mind </h2>
 <p><a href="https://commons.wikimedia.org/wiki/File:Nightingale-mortality.jpg#/media/File:Nightingale-mortality.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Nightingale-mortality.jpg" alt="Polar chart by Florence Nightingale, 1858" height="600" width="800"></a><br>By <a href="//en.wikipedia.org/wiki/Florence_Nightingale" class="extiw" title="w:Florence Nightingale">w:Florence Nightingale</a> (1820?1910). - <a rel="nofollow" class="external free" href="http://www.royal.gov.uk/output/Page3943.asp">http://www.royal.gov.uk/output/Page3943.asp</a>, Public Domain, https://commons.wikimedia.org/w/index.php?curid=1474443</p>
 				</section>
 
 				<section>
-					<h2> DNLAB Bigdata </h2>
+					<h2> DNLAB Networking Data </h2>
 							<iframe src="scholar.JPG" width="800" height="600"> </iframe>
 				</section>
 
@@ -260,13 +207,11 @@ function reduce(String word, Iterator partialCounts):
 
 
 				<section>
-					<h2> Interested in Big Data ? </h2>
+					<h2> Interested in Networking Data ? </h2>
 					<ul>
-					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
-					<li> 데이터과학은 문제를 해결하는 도구: Small data부터 시작 (LAMP) </li>
-					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
-					<li> Git, JIRA, Jenkins, Slack, Trello, JUnit, Selenium, ...
-					<li> <font color="#FFFF00">컴퓨터공학</font> 기반을 갖춘 <font color="00FF00">데이터과학자</font>가 됩시다 ! </li>
+					<li> 데이터분석: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
+					<li> 데이터엔지니어링: Small data부터 시작 (LAMP), Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
+					<li> <font color="#FFFF00">컴퓨터공학</font> 기반을 갖춘 <font color="00FF00">데이터 네트워크 엔지니어</font>가 됩시다 ! </li>
 					</ul>
 				</section>
 
