--- a/bigdata.html
+++ b/bigdata.html
@@ -42,21 +42,21 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-icon.png" data-background-transition="zoom">
 					<h1><font color="#000000">Newtorking Data</font></h1>
-					<h3><font color="#f08">Data,</font> <font color="#000080">SW,</font> <font color="#00FF00">Insight </font>?</h3>
+					<h3><font color="#f08">Data,</font> <font color="#000080">Networking,</font> <font color="#00FF00">Insight </font>?</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="800000">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
 					</p>
 				</section>
 
 				<section>
-					<h2><font color="#f08">데이터? </font> <font color="FFFF00">알고리즘? </font> </h2>
+					<h2><font color="#f08">Data ? </font> <font color="FFFF00">Networking? </font> </h2>
 					<blockquote>
-					<p class="fragment"> &ldquo;More <font color = "#f08">data</font> usually beats better <font color="FFFF00"> algorithms</font>.&rdquo; by Anand Rajaraman</p>
+					<p class="fragment"> &ldquo;Data <font color = "#f08"> is raw, </font> <font color="FFFF00">, preprocessed, engineered for analysis to achieve better product !  </font>.&rdquo; by Youngseok Lee </p>
 					</blockquote>
 				</section>
 
 				<section>
-					<h2>데이터로 혁신한 경우는??</h2>
+					<h2>데이터 혁신한 경우는??</h2>
 					<ul>
 					<li> 검색의 Google (Altavista, Yahoo!, ...)</li>
 					<li> 친구의 Facebook (MySpace, 싸이월드 )</li>
