--- a/bigdata.html
+++ b/bigdata.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-icon.png" data-background-transition="zoom">
-					<h1><font color="#000000">Newtorking Data</font></h1>
+					<h1><font color="#000000">Networking Data</font></h1>
 					<h3><font color="#f08">Data,</font> <font color="#000080">Networking,</font> <font color="#00FF00">Insight </font>?</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="800000">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
